tests/ui/feature-gates/feature-gate-doc_notable_trait.stderr
error[E0658]: `#[doc(notable_trait)]` is experimental
  --> $DIR/feature-gate-doc_notable_trait.rs:1:1
   |
LL | #[doc(notable_trait)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #45040 <https://github.com/crablang/crablang/issues/45040> for more information
   = help: add `#![feature(doc_notable_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
